[package]
name = "wallet-fingerprint"
description = "A library for detecting wallet fingerprints in Bitcoin transactions"
license = "MIT"
repository = "https://github.com/arminsabouri/rust-wallet-fingerprints"
documentation = "https://docs.rs/wallet-fingerprint"
readme = "README.md"
categories = ["cryptography"]
keywords = ["data-structures", "security", "cryptography"]
authors = ["Armin Sabouri <me@arminsabouri.com>"]
version = "0.0.2"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand"] }
hex = "0.4.3"
