[package]
name = "wallet-fingerprint"
description = "A library for detecting wallet fingerprints in Bitcoin transactions"
license = "MIT"
repository = "https://github.com/arminsabouri/rust-wallet-fingerprints"
documentation = "https://docs.rs/wallet-fingerprint"
readme = "README.md"
categories = ["cryptography"]
keywords = ["data-structures", "security", "cryptography"]
authors = ["Armin Sabouri <me@arminsabouri.com>"]
version = "0.0.2"
edition = "2021"

[features]
ffi = ["uniffi/cli", "bitcoin-ffi"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29.1", features = ["bindgen-tests"] }
rand = "0.8.5"

[lib]
name = "wallet_fingerprint"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
bitcoin = { version = "0.32.7", features = ["rand"] }
hex = "0.4.3"
uniffi = { version = "0.29.1", optional = true }
bitcoin-ffi = { git = "https://github.com/bitcoindevkit/bitcoin-ffi.git", branch = "master", optional = true }
